# quantum-frameworks-python-exploration

./: .gitignore  README.md  pyproject.toml  requirements.txt
Python/Cirq/: 01_CirqGettingStarted.ipynb
Python/Pennylane/: 01_PennylaneGettingStarted.ipynb
Python/Qiskit/: 01_QiskitIntroExpanded.ipynb  02_SimulatingLargerUsingAer.ipynb  03_ConnectToIBMQP.ipynb  04_StatePreparationWithQclib.ipynb
Python/Qiskit/coupling-maps/: save-backend-coupling-maps.py
